////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      CustomProductControllerStateAccessoryPairing.h
///
/// @brief     This source code file contains functionality to process events that occur during the
///            product accessory pairing state.
///
/// @author    Derek Richardson
///
/// @attention Copyright (C) 2018 Bose Corporation All Rights Reserved
///
////////////////////////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Included Header Files
///
////////////////////////////////////////////////////////////////////////////////////////////////////
#pragma once
#include "ProductControllerState.h"
#include "HsmState.h"
#include "LpmServiceMessages.pb.h"
#include "APTimer.h"

////////////////////////////////////////////////////////////////////////////////////////////////////
///                            Start of Product Application Namespace                            ///
////////////////////////////////////////////////////////////////////////////////////////////////////
namespace ProductApp
{

////////////////////////////////////////////////////////////////////////////////////////////////////
///
///            Forward Class Declarations
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class ProductControllerHsm;
class ProfessorProductController;

////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @class CustomProductControllerStateAccessoryPairing
///
/// @brief This class is used for executing accessory pairing.
///
////////////////////////////////////////////////////////////////////////////////////////////////////
class CustomProductControllerStateAccessoryPairing : public ProductControllerState
{
public:

    CustomProductControllerStateAccessoryPairing(
        ProductControllerHsm&       hsm,
        CHsmState*                  pSuperState,
        ProfessorProductController& productController,
        Hsm::STATE                  stateId,
        const std::string&          name = "AccessoryPairing" );

    ~CustomProductControllerStateAccessoryPairing( ) override
    {

    }

    void HandleStateStart( ) override;
    void HandleStateExit( )  override;
    bool HandleIntentSpeakerPairing( KeyHandlerUtil::ActionType_t intent ) override;
    bool HandleIntentVolumeControl( KeyHandlerUtil::ActionType_t intent )  override;
    bool HandleIntentMuteControl( KeyHandlerUtil::ActionType_t intent )    override;
    bool HandleIntentPowerToggle( )                                        override;
    bool HandlePairingState( ProductAccessoryPairing pairingStatus )       override;
};

////////////////////////////////////////////////////////////////////////////////////////////////////
///                             End of Product Application Namespace                             ///
////////////////////////////////////////////////////////////////////////////////////////////////////
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                        End of File                                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
